--- a/package.json
+++ b/package.json
@@ -18,11 +18,18 @@
     "build": "stencil build --docs",
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
+    "test:foo": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
+    "preversion": "yarn test",
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@stencil/core": "^2.0.1"
+    "@stencil/core": "^2.0.1",
+    "@types/jest": "26.0.14",
+    "@types/puppeteer": "3.0.0",
+    "jest": "26.6.0",
+    "jest-cli": "26.6.0",
+    "puppeteer": "5.3.1"
   },
   "license": "MIT"
 }
