--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "stencil-starter-project-name",
+  "name": "stencil-demo-component",
   "version": "0.0.1",
-  "description": "Stencil Component Starter",
+  "description": "Stencil Demo Component",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
   "es2015": "dist/esm/index.mjs",
@@ -9,7 +9,7 @@
   "types": "dist/custom-elements/index.d.ts",
   "collection": "dist/collection/collection-manifest.json",
   "collection:main": "dist/collection/index.js",
-  "unpkg": "dist/stencil-starter-project-name/stencil-starter-project-name.js",
+  "unpkg": "dist/stencil-demo-component/stencil-demo-component.js",
   "files": [
     "dist/",
     "loader/"
